ResponsivePanel with top orientation does not allow overflowing, e.g. when using a Menu. Fixes telerik/kendo-ui-core#930

--- a/styles/web/common/responsivepanel.less
+++ b/styles/web/common/responsivepanel.less
@@ -38,10 +38,10 @@
 
 .k-rpanel-top {
     position: static;
-    overflow: hidden;
     max-height: 0;
 
     &.k-rpanel-expanded {
         max-height: 568px;
+        overflow: visible;
     }
 }
